fix css spacing

--- a/assets/css/include.css
+++ b/assets/css/include.css
@@ -31,7 +31,7 @@
         bottom: 67px !important;
     }
     body {
-        line-height: .95 !important;
+        line-height: .75 !important;
     }
 }
 
